db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-db
spec:
  selector:
    matchLabels:
      app: my-db
  template:
    metadata:
      labels:
        app: my-db
    spec:
      containers:
        - name: my-db
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
           - name: storage1
             mountPath: /data/db
      volumes:
        - name: storage1
          persistentVolumeClaim:
            claimName: db-pvc
