db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-db-service
spec:
  selector:
    app: my-db
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
